--- a/StudentManagementSystem/StudentManagementSystem/Views/Shared/_Layout.cshtml
+++ b/StudentManagementSystem/StudentManagementSystem/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
         <ul class="nav flex-column nav-pills p-3 gap-1">
 
             <li class="nav-item">
-                <a class="nav-link @(currentController == "Home" ? "active" : "")"
-                   asp-controller="Home" asp-action="Index">
+                <a class="nav-link @(currentController == "Admin" ? "active" : "")"
+                   asp-controller="Admin" asp-action="AdminDashboard">
                     Dashboard
                 </a>
             </li>
