--- a/StudentManagementSystem/StudentManagementSystem/Views/Students/Details.cshtml
+++ b/StudentManagementSystem/StudentManagementSystem/Views/Students/Details.cshtml
@@ -2,10 +2,13 @@
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h3>Manage Students</h3>
+            <a asp-action="Details" class="btn btn-manage-students">
+            <i class="bi bi-plus-lg me-1"></i> Manage Students
+        </a>
+    
+        
+    
 
-    <a asp-action="Create" class="btn btn-success">
-        Add Student
-    </a>
 </div>
 
 <table class="table table-bordered table-hover">
