--- a/StudentManagementSystem/StudentManagementSystem/Views/Students/Details.cshtml
+++ b/StudentManagementSystem/StudentManagementSystem/Views/Students/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Student>
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3>Manage Students</h3>
-            <a asp-action="Details" class="btn btn-manage-students">
-            <i class="bi bi-plus-lg me-1"></i> Manage Students
+        <a asp-action="Manage" class="btn btn-manage-students">
+            Manage Students
         </a>
     
+
         
     
 
